--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "vite",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "web",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite --host --port 3001",
-    "build": "tsc --noEmit && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "MIT",
+  "description": "",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -22,8 +21,9 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.516.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "next": "^16.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
