--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
-  "buildCommand": "cd apps/vite && npm run build",
-  "outputDirectory": "apps/vite/dist",
+  "buildCommand": "cd apps/web && npm run build",
+  "outputDirectory": "apps/web/.next",
   "installCommand": "npm install",
-  "framework": "vite",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "framework": "nextjs"
 }
